@@ -78,128 +78,6 @@ Processor 1			ID = 0
 	PStateReg		0x8000012D-0x0000C003
 	PStateReg		0x80000121-0x0040D04C
 
-	Package Type		0x2
-	Model			00
-	String 1		0x0
-	String 2		0x0
-	Page			0x0
-	Base TDP		0 Watts
-	Boosted P-States	2
-	Max non-turbo ratio	36.00x
-	Max turbo ratio		39.00x
-	TSC			3593.6 MHz
-	APERF			3786.6 MHz
-	MPERF			3585.3 MHz
-	Attached device		PCI device at bus 0, device 24, function 0
-			100	00000000 00000000 00000000 00000000 
-			110	00000008 00000000 00000000 00000000 
-			120	00000000 00000000 00000000 00000000 
-			130	00000000 00000000 00000000 00000000 
-			140	00000000 00000000 00000000 00000000 
-			150	00000000 00000000 00000000 00000000 
-			160	00000000 00000000 00000800 0074003A 
-			170	00000001 00000000 00000000 00000000 
-			180	00000000 00000000 00000000 00000000 
-			190	00000000 00000000 00000000 00000000 
-			1A0	80000003 00000000 00000000 00000000 
-			1B0	00000000 00000000 00000000 00000000 
-			1C0	00000000 00000000 00000000 00000000 
-			1D0	00000000 00000000 00000000 0000000E 
-			1E0	00000000 00000000 00000000 00000000 
-			1F0	00000000 00000000 00000000 00000000 
-		
-	Attached device		PCI device at bus 0, device 24, function 1
-			100	00000000 00000000 00000000 00000000 
-			110	00000000 00000000 00000000 00000000 
-			120	00000000 00000089 00000000 00000000 
-			130	00000000 00000000 00000000 00000000 
-			140	00000000 00000000 00000000 00000000 
-			150	00000000 00000000 00000000 00000000 
-			160	00000000 00000000 00000000 00000000 
-			170	00000000 00000000 00000000 00000000 
-			180	00000000 00000000 00000000 00000000 
-			190	00000000 00000000 00000000 00000000 
-			1A0	00000000 00000000 00000000 00000000 
-			1B0	00000000 00000000 00000000 00000000 
-			1C0	00000000 00000000 00000000 00000000 
-			1D0	00000000 00000000 00000000 00000000 
-			1E0	00000000 00000000 00000000 00000000 
-			1F0	00000000 00000000 00000000 00000000 
-		
-	Attached device		PCI device at bus 0, device 24, function 2
-			100	00000000 00000000 00000000 00000000 
-			110	00000104 00000200 0C4CA424 0CE00F31 
-			120	00F99575 00000000 00000000 00000000 
-			130	C2DCF93D DD4FB91B 6635F25A 30899101 
-			140	00000001 00000029 00000000 00000000 
-			150	00000000 00000000 00000000 00000000 
-			160	01F8FFC0 00000000 00000000 00000000 
-			170	00000000 00000000 00020000 18000400 
-			180	0000000A 00800005 39000000 00020000 
-			190	03010000 9F590892 8D0F812F 000000A1 
-			1A0	030A0300 00000000 80320000 00000000 
-			1B0	0FC39001 4C0F7D26 00000000 00000000 
-			1C0	00000000 00000000 00000000 00000000 
-			1D0	00000000 00000000 00000000 00000000 
-			1E0	00000000 00000000 00000000 00000000 
-			1F0	00000000 00000000 00000000 00000000 
-		
-	Attached device		PCI device at bus 0, device 24, function 3
-			100	00000000 00000000 00000000 00000000 
-			110	00000000 00000000 00000000 00000000 
-			120	00000000 00000000 00000000 00000000 
-			130	00000000 00000000 00000000 00000000 
-			140	00A11555 00000077 0000052A 00000000 
-			150	00000000 00000000 00000000 00000000 
-			160	C00A0FFF 00000000 C00A0FFF 00000000 
-			170	00000000 00000000 00000000 00000004 
-			180	017003E0 00000000 08000010 00000000 
-			190	00000000 00000000 04000000 00000000 
-			1A0	00034182 00000000 00000000 00000000 
-			1B0	00000000 00000000 00000000 00000000 
-			1C0	00000000 00000000 00000000 00000100 
-			1D0	00000000 00000000 00000000 00000000 
-			1E0	00000000 80001385 00000000 00000000 
-			1F0	00080000 00000000 00000000 090E074F 
-		
-	Attached device		PCI device at bus 0, device 24, function 4
-			100	00000000 00000000 00000000 00830069 
-			110	000C2002 00000000 1907190B 00000000 
-			120	00000000 00000000 801C0280 00000000 
-			130	00000002 00000000 00000000 00000001 
-			140	0A418857 000210C6 1B8EAC33 0003C415 
-			150	50500850 34343434 00000083 00000089 
-			160	00610F01 00000000 00000000 00000276 
-			170	00000000 00000000 00000000 00000000 
-			180	00000000 00000000 00000000 00000000 
-			190	00000000 00000000 00000000 00000000 
-			1A0	00000000 00000000 00000000 00000000 
-			1B0	00000000 00000000 00000116 00000000 
-			1C0	00000000 00000000 00000000 00000000 
-			1D0	00000000 00000000 00000000 00000000 
-			1E0	0B7E2017 0B942816 0B284414 0AEE5C10 
-			1F0	0ABA780C 0A869C08 0A5AC003 0A43D04C 
-		
-	Attached device		PCI device at bus 0, device 24, function 5
-			100	00000000 00000000 00000000 00000000 
-			110	00000000 00000000 00000000 00000000 
-			120	00000011 00000000 00400058 0000002E 
-			130	00000000 00000000 00000000 00000000 
-			140	00000000 00000000 00000000 00000000 
-			150	00000000 00000000 01190021 01330014 
-			160	2A00F81D 2A011017 23011815 9D459899 
-			170	00000453 000AC05A 00060C04 B3000000 
-			180	00000000 00000000 0000002D 00000000 
-			190	00000000 0000000B 00202020 00000000 
-			1A0	00000000 00000000 00000000 00000000 
-			1B0	00000000 00000000 00000000 00000000 
-			1C0	00000000 00000000 00000000 00000000 
-			1D0	00000000 00000000 00000000 00000000 
-			1E0	00000000 00000000 00000000 00000000 
-			1F0	00000000 00000000 00000000 00000000 
-		
-
-
 Thread dumps
 -------------------------------------------------------------------------
 
